# client

./: .gitignore  ARCHITECTURE_COMPARISON.md  Cargo.toml  DEVNET_TODO.md  README.md  ROLLDOWN_INDEX.md  ROLLDOWN_SUMMARY.md  build.rs  code-log.md  code-spec.md  distribution_plan.md  helia_plan.md  plan.md  rust-toolchain.toml  todo.md  updater_plan.md
.claude/: settings.local.json
.github/: apt-packages.txt
.github/workflows/: build-and-test.yml  build.yml  release.yml  test.yml
assets/: index.html  launcher.html  tabbar.html  wallet.html
assets/react/: launcher.js  wallet-selector.js  wallet.js
config/: mainnet.json  sepolia.json
internal-ui/: package.json  tsconfig.json
internal-ui/scripts/: build.ts
internal-ui/src/: code.tsx  home.tsx  launcher.tsx  preload-app.ts  preload-settings.ts  preload-tabbar.ts  preload-wallet-selector.ts  settings.tsx  tabbar.tsx  wallet-selector.tsx  wallet.tsx
internal-ui/src/code/: App.tsx  ChatMessageContent.tsx  CodeEditor.tsx  constants.ts  styles.ts  types.ts  utils.ts
internal-ui/src/code/chat/: ToolCallCard.tsx
internal-ui/src/code/chat/llm/: aiSdkTools.ts  claude.ts  ollama-native.ts  openai.ts  provider.ts  sse.ts  system.ts  tools.ts
internal-ui/src/code/editor/: DiffViewer.tsx  diff.ts
internal-ui/src/code/hooks/: useAnvil.ts  useChat.ts  useConsole.ts  useDevServer.ts  useEditor.ts  useProject.ts  usePublish.ts  useSettings.ts
internal-ui/src/ipc/: client.ts  contracts.ts  host-dispatch.ts
internal-ui/src/styles/: shared.ts
internal-ui/static/: code.html  home.html  launcher.html  settings.html  tabbar.html  wallet-selector.html
ipfs-helper/: index.mjs  package.json
packaging/: cargo-version.mjs
packaging/icons/: vibefi.icns
packaging/linux/: AppRun  build-appimage-local.sh  build-appimage.sh  patch-appimage.sh
packaging/macos/: install-vibefi-macos.sh
patches/coins-ledger/: .cargo_vcs_info.json  Cargo.toml
patches/trezor-client/: .cargo_vcs_info.json  Cargo.toml
scripts/: install-deps-ubuntu.sh
src/: automation.rs  automation_stub.rs  bundle.rs  config.rs  devnet.rs  hardware.rs  ipc.rs  ipc_contract.rs  ipfs_helper.rs  logging.rs  main.rs  menu.rs  registry.rs  rpc_manager.rs  runtime_paths.rs  settings.rs  state.rs  ui_bridge.rs  walletconnect.rs  webview.rs  webview_manager.rs
src/code/: anvil.rs  dev_server.rs  filesystem.rs  mod.rs  project.rs  publish.rs  router.rs  settings.rs  validator.rs
src/config/: app_config.rs  builder.rs  cli.rs  env.rs  mod.rs  resolved.rs  validation.rs
src/events/: mod.rs  user_event.rs
src/ipc/: hardware.rs  ipfs.rs  local.rs  mod.rs  router.rs  rpc.rs  selector.rs  settings.rs  walletconnect.rs
walletconnect-helper/: index.mjs  package-lock.json  package.json
