[package]
name = "wry_eip1193_example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }

# Windowing + WebView
wry = "0.54.1"
tao = "0.34.5"

# Ethereum (Alloy)
alloy-primitives = "1.5"
alloy-signer = "1.5"
alloy-signer-local = "1.5"
alloy-signer-ledger = "1.5"
alloy-signer-trezor = "1.5"
alloy-network = "1.5"
alloy-consensus = "1.5"
alloy-eips = "1.5"
alloy-rpc-types-eth = "1.5"
alloy-sol-types = "1.5"
tokio = { version = "1", features = ["rt", "net", "time"] }

# small utils
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSMenu", "NSMenuItem", "NSEvent"] }
objc2-foundation = "0.3.2"
