[package]
name = "vibefi"
version = "0.1.0"
edition = "2024"

[package.metadata.packager]
product-name = "VibeFi"
identifier = "fi.vibefi.client"
formats = ["app", "dmg", "deb", "appimage"]
icons = ["packaging/icons/vibefi.icns", "packaging/icons/vibefi.png"]
out-dir = "target/packager"

resources = [
  "walletconnect-helper/dist/walletconnect-helper.mjs",
  "ipfs-helper",
  "config/mainnet.json",
  "config/sepolia.json",
]

external-binaries = ["vendor/bun/bun"]

before-packaging-command = "bun install --cwd walletconnect-helper --frozen-lockfile && bun install --cwd ipfs-helper --frozen-lockfile && cd walletconnect-helper && bun run build:dist"

[package.metadata.packager.macos]
minimum-system-version = "12.0"
entitlements = "packaging/macos/entitlements.plist"

[package.metadata.packager.dmg]
background = "packaging/macos/dmg-background.png"
window-size = { width = 660, height = 420 }
app-position = { x = 180, y = 220 }
application-folder-position = { x = 480, y = 220 }

[package.metadata.packager.deb]
section = "utils"
priority = "optional"
depends = "libgtk-3-0, libwebkit2gtk-4.1-0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }

# Windowing + WebView
wry = "0.54.1"
tao = "0.34.5"

# Ethereum (Alloy)
alloy-primitives = "1.5"
alloy-signer = "1.5"
alloy-signer-local = "1.5"
alloy-signer-ledger = "1.5"
alloy-signer-trezor = "1.5"
alloy-network = "1.5"
alloy-consensus = "1.5"
alloy-eips = "1.5"
alloy-rpc-types-eth = "1.5"
alloy-sol-types = "1.5"
tokio = { version = "1", features = ["rt", "net", "time"] }
dirs = "6"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSMenu", "NSMenuItem", "NSEvent"] }
objc2-foundation = "0.3.2"
